Fixed navigation for IE8 - there are lingering z-index issues with IE7 that I am not going to fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -913,7 +913,12 @@ html.lt-ie9 textarea {
 	border: 1px solid #848484;
 }
 
-html.lt-ie9 nav.primary li {
+/* Navigation */
+html.lt-ie9 header nav.utility {
+	display: block;
+}
+
+html.lt-ie9 header nav li {
 	float: left;
 	position: relative;
 	white-space: nowrap;
@@ -928,8 +933,11 @@ html.lt-ie9 nav.primary li.active ul {
 	width: 200px;
 }
 
-html.lt-ie9 header li:hover > ul,
-html.lt-ie9 nav.primary li.active:hover > ul {
+	html.lt-ie9 nav.primary li ul a {
+		padding: .6em 1.33em .6em;
+	}
+
+html.lt-ie9 header li:hover > ul {
 	display: block;
 	z-index: 2;
 }
@@ -939,21 +947,70 @@ html.lt-ie9 nav.primary li.active:hover > ul {
 		min-width: 100%;
 	}
 
-html.lt-ie9 .site {
-	margin: 0 auto;
-	width: 886px; /* width of split 1920x1080 on Windows */
+	html.lt-ie9 nav.primary > ul > li.active > a,
+	html.lt-ie9 nav.primary > ul > li:hover > a {
+		border-top-left-radius: 6px;
+		border-top-right-radius: 6px;
+	}
+
+	html.lt-ie9 nav.primary > ul > li a:hover {
+		color: #FFFFFF;
+	}
+
+	html.lt-ie9 nav.primary > ul > li:hover > ul {
+		border-bottom-left-radius: 6px;
+		border-bottom-right-radius: 6px;
+	}
+
+	html.lt-ie9 header nav.secondary {
+		display: block;
+	}
+
+	html.lt-ie9 header nav li ul {
+		background: #13ABE8;
+		margin: 0;
+		padding: 0;
+	}
+	
+	html.lt-ie9 header nav li ul a {
+		font-size: .875em;
+		line-height: 2;
+	}
+
+	html.lt-ie9 header nav li ul li {
+		float: none;
+	}
+
+		html.lt-ie9 header nav li ul a {
+			padding: 0 16px 0 32px;
+		}
+
+		html.lt-ie9 nav.primary ul ul {
+			padding: 0;
+		}
+html.lt-ie9 .branding {
+	padding: 1.75em 0;
 }
 
-	html.lt-ie9 .main {
-		margin-right: 192px;
-	}
+html.lt-ie9 aside.primary {
+	padding: 0 1em 0 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 192px;
+}
 
-	html.lt-ie9 aside.primary {
-		position: absolute;
-		right: 0;
-		top: 0;
-		width: 192px;
-	}
+html.lt-ie9 .main {
+	margin-right: 192px;
+	padding: 0 32px 0 0;
+}
+
+html.lt-ie9 .mold {
+	margin: 0 auto;
+	max-width: 1024px;
+	padding: 0 16px;
+	position: relative;
+}
 
 /* = Print Styles = */
 @media print {
